[gd_scene load_steps=21 format=3 uid="uid://cugxqj7rc0q35"]

[ext_resource type="Script" path="res://UI/Player Stats Overlay/PlayerStatsOverlay.gd" id="1_7jc62"]
[ext_resource type="Texture2D" uid="uid://dwo0fuwylfxeq" path="res://UI/Player Stats Overlay/Assets/Stats Panel Bckgrd.png" id="2_lbsth"]
[ext_resource type="Texture2D" uid="uid://k0o25ihgea1n" path="res://UI/Player Stats Overlay/Assets/Hunger Progress Under.png" id="3_8l8vs"]
[ext_resource type="Texture2D" uid="uid://bdgevpcheclv5" path="res://UI/Player Stats Overlay/Assets/Hunger Progress Bar.png" id="4_t8pcw"]
[ext_resource type="Texture2D" uid="uid://xnppg0u7t7w4" path="res://UI/Player Stats Overlay/Assets/Stamina Recharge Under.png" id="5_4wndn"]
[ext_resource type="Texture2D" uid="uid://gfbxblly7q78" path="res://UI/Player Stats Overlay/Assets/Stamina Recharge Bar.png" id="6_prf8b"]
[ext_resource type="Texture2D" uid="uid://br8kgmxe41gh0" path="res://UI/Player Stats Overlay/Assets/Hunger Bar.png" id="7_c6ldt"]
[ext_resource type="Texture2D" uid="uid://cjjobaebw8uwu" path="res://UI/Player Stats Overlay/Assets/Hunger Under.png" id="8_il1j6"]
[ext_resource type="Texture2D" uid="uid://c5mo0gxdddlte" path="res://UI/Player Stats Overlay/Assets/Hunger Change.png" id="9_7kwf4"]
[ext_resource type="Shader" path="res://UI/Player Stats Overlay/StaminaBarTipGlow.gdshader" id="10_44r3x"]
[ext_resource type="Texture2D" uid="uid://l7chqvbfg16y" path="res://UI/Player Stats Overlay/Assets/Stamina Bar.png" id="11_gimvt"]
[ext_resource type="Texture2D" uid="uid://1m3lv40blexn" path="res://UI/Player Stats Overlay/Assets/Stamina Under.png" id="12_pkue2"]
[ext_resource type="Texture2D" uid="uid://dlx621mbgic4b" path="res://UI/Player Stats Overlay/Assets/Stamina Change.png" id="13_18ymk"]
[ext_resource type="Texture2D" uid="uid://ba6aut5vjc3g" path="res://UI/Player Stats Overlay/Assets/Shield.png" id="14_a8thk"]
[ext_resource type="Texture2D" uid="uid://csmk61f3sxw44" path="res://UI/Player Stats Overlay/Assets/Shield Under.png" id="15_xw35f"]
[ext_resource type="Texture2D" uid="uid://dcsw75wiocvy0" path="res://UI/Player Stats Overlay/Assets/Shield Change.png" id="16_rno7t"]
[ext_resource type="Texture2D" uid="uid://b2v0527iatsjd" path="res://UI/Player Stats Overlay/Assets/Health.png" id="17_5lrwe"]
[ext_resource type="Texture2D" uid="uid://dhvpkl1svbcys" path="res://UI/Player Stats Overlay/Assets/Health Under.png" id="18_df0g5"]
[ext_resource type="Texture2D" uid="uid://lj78cee4aa38" path="res://UI/Player Stats Overlay/Assets/Health Change.png" id="19_tg5j6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0q2s6"]
shader = ExtResource("10_44r3x")
shader_parameter/progress = 0.0
shader_parameter/tip_size = 0.15
shader_parameter/opacity = 0.385

[node name="PlayerStatsOverlay" type="Control"]
texture_filter = 2
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 229.0
offset_right = 4.0
offset_bottom = 229.0
script = ExtResource("1_7jc62")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.08, 0.08)

[node name="StatsBackground" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_lbsth")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 59
theme_override_constants/margin_top = 4

[node name="HungerProgressBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
value = 35.0
fill_mode = 4
radial_initial_angle = 201.0
radial_fill_degrees = 157.0
texture_under = ExtResource("3_8l8vs")
texture_progress = ExtResource("4_t8pcw")

[node name="StaminaRechargeBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
value = 35.0
fill_mode = 5
radial_initial_angle = 159.0
radial_fill_degrees = 157.0
texture_under = ExtResource("5_4wndn")
texture_progress = ExtResource("6_prf8b")

[node name="HungerBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
self_modulate = Color(1.39, 1.39, 1.39, 1)
layout_mode = 2
size_flags_vertical = 4
value = 50.0
fill_mode = 4
radial_initial_angle = 201.0
radial_fill_degrees = 157.0
texture_progress = ExtResource("7_c6ldt")

[node name="HungerChange" type="TextureProgressBar" parent="PanelContainer/MarginContainer/HungerBar"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
offset_right = 355.0
offset_bottom = 356.0
size_flags_vertical = 4
value = 65.0
fill_mode = 4
radial_initial_angle = 201.0
radial_fill_degrees = 157.0
texture_under = ExtResource("8_il1j6")
texture_progress = ExtResource("9_7kwf4")

[node name="StaminaBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_0q2s6")
layout_mode = 2
size_flags_vertical = 4
value = 50.0
fill_mode = 5
radial_initial_angle = 159.0
radial_fill_degrees = 157.0
texture_progress = ExtResource("11_gimvt")

[node name="StaminaChange" type="TextureProgressBar" parent="PanelContainer/MarginContainer/StaminaBar"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
offset_right = 355.0
offset_bottom = 356.0
size_flags_vertical = 4
value = 65.0
fill_mode = 5
radial_initial_angle = 159.0
radial_fill_degrees = 157.0
texture_under = ExtResource("12_pkue2")
texture_progress = ExtResource("13_18ymk")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(1495, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 38

[node name="ShieldBar" type="TextureProgressBar" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1.7, 1.7, 1.7, 1)
custom_minimum_size = Vector2(1439, 154)
layout_mode = 2
value = 75.0
texture_progress = ExtResource("14_a8thk")
texture_progress_offset = Vector2(16, 16)

[node name="ShieldChange" type="TextureProgressBar" parent="PanelContainer/VBoxContainer/ShieldBar"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 80.0
texture_under = ExtResource("15_xw35f")
texture_progress = ExtResource("16_rno7t")
texture_progress_offset = Vector2(16, 16)

[node name="HealthBar" type="TextureProgressBar" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1.55, 1.55, 1.55, 1)
custom_minimum_size = Vector2(1441, 156)
layout_mode = 2
value = 100.0
texture_progress = ExtResource("17_5lrwe")
texture_progress_offset = Vector2(16, 17)

[node name="HealthChange" type="TextureProgressBar" parent="PanelContainer/VBoxContainer/HealthBar"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 0
offset_right = 1441.0
offset_bottom = 156.0
value = 100.0
texture_under = ExtResource("18_df0g5")
texture_progress = ExtResource("19_tg5j6")
texture_progress_offset = Vector2(16, 17)

[node name="HealthChangedTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="ShieldChangedTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="HungerChangedTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="StaminaChangedTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="StaminaRechargeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="HealthChangedTimer" to="." method="_on_health_changed_timer_timeout"]
[connection signal="timeout" from="ShieldChangedTimer" to="." method="_on_shield_changed_timer_timeout"]
[connection signal="timeout" from="HungerChangedTimer" to="." method="_on_hunger_changed_timer_timeout"]
[connection signal="timeout" from="StaminaChangedTimer" to="." method="_on_stamina_changed_timer_timeout"]
[connection signal="timeout" from="StaminaRechargeTimer" to="." method="_on_stamina_recharge_timer_timeout"]
